--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -28,6 +28,7 @@ p, h1, h2, h3, h4, h5, h6 {
 #root, #__next {
     isolation: isolate;
 }
+/* Josh W Comeau Reset */
 /* Font */
 @font-face {
     font-family: 'Work Sans';
@@ -35,7 +36,7 @@ p, h1, h2, h3, h4, h5, h6 {
     font-weight: 100 900;  
     font-style: normal;
 }
-
+/* Font */
 /* Additional Global Styles */
 body {
     background-color: rgb(28 25 23);
@@ -46,7 +47,7 @@ body {
     padding: 1rem;
     justify-content: center;
     align-items: center;
-    height: 75vh;
+    height: 100vh;
 }
 
 #root {
@@ -57,14 +58,102 @@ body {
     width: 100vw;           
 }
 
-.hidden {
-    display: none;
-}
-
-.container {
-    max-width: 500px;
+p,
+h1,
+h2 {
+    text-align: center;
 }
 
 button {
     display: block;
+    width: 200px;
+    margin-top: 1rem;
+    background-color: rgb(48, 127, 245);
+    border-radius: 1rem;
+    border: none;
+    color: white;
+    padding: 0.25rem 0;
+    transition: background-color 0.5s ease; 
 }
+
+button:hover {
+    background-color: rgb(117, 169, 249);
+}
+
+.container {
+    max-width: 500px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.homePage,
+.highScorePage,
+.quizFinishedPage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -75%;
+}
+/* Additional Global Styles */
+/* Home Page */
+.coderImg {
+    max-width: 200px;
+    height: auto;
+}
+/* Home Page */
+/* High Score Page */
+.scoresUl {
+    background-color: rgb(37, 37, 37);
+    padding: 1rem;
+    text-align: center;
+    width: 100%;
+    border-radius: 1rem;
+}
+
+.scoresLi {
+    list-style: none;
+}
+/* High Score Page */
+/* Quiz Page */
+.quizPage {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    margin-top: -75%;
+}
+
+.quizHeader {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 3rem;
+}
+
+.navigateHomeBtn {
+    width: 100px;
+    margin: 0;
+}
+/* Quiz Page */
+/* Quiz Finished Page */
+.quizP {
+    margin: 2rem 0;
+}
+
+.initialsInput {
+    width: 200px;
+    border-radius: 1rem;
+    border: none;
+    padding: 0.25rem;
+}
+/* Quiz Finished Page */
+/* Hidden Class - Keep at bottom to avoid overriding. */
+.hidden {
+    display: none;
+}
+/* Hidden Class - Keep at bottom to avoid overriding. */
