--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -47,14 +47,15 @@ body {
     padding: 1rem;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    overflow-y: auto;
 }
 
 #root {
     display: flex;
     justify-content: center; 
     align-items: center;     
-    height: 100vh;           
+    min-height: 100vh;           
     width: 100vw;           
 }
 
@@ -82,7 +83,7 @@ button:hover {
 
 .container {
     max-width: 500px;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -96,7 +97,7 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -75%;
+    /* margin-top: -75%; */
 }
 /* Additional Global Styles */
 /* Home Page */
@@ -125,7 +126,7 @@ button:hover {
     justify-content: space-evenly;
     align-items: center;
     height: 100%;
-    margin-top: -75%;
+    /* margin-top: -75%; */
 }
 
 .quizHeader {
