--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -83,7 +83,7 @@ button:hover {
 
 .container {
     max-width: 500px;
-    min-height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -125,7 +125,7 @@ button:hover {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     margin-top: -75%;
 }
 
@@ -138,7 +138,7 @@ button:hover {
 
 .navigateHomeBtn {
     width: 100px;
-    margin: 0;
+    margin: 0 4rem 0 0;
 }
 /* Quiz Page */
 /* Quiz Finished Page */
