--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -126,14 +126,14 @@ button:hover {
     justify-content: space-evenly;
     align-items: center;
     height: 100vh;
-    margin-top: -75%;
+    margin-top: -50%;
 }
 
 .quizHeader {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
 
 .timer {
@@ -147,6 +147,18 @@ button:hover {
 .navigateHomeBtn {
     width: 100px;
     margin: 0 4rem 0 0;
+}
+
+.quizP {
+    height: 80px;
+    width: 250px;
+}
+
+.quizChoicesDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 /* Quiz Page */
 /* Quiz Finished Page */
