--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -28,7 +28,6 @@ p, h1, h2, h3, h4, h5, h6 {
 #root, #__next {
     isolation: isolate;
 }
-/* Josh W Comeau Reset */
 /* Font */
 @font-face {
     font-family: 'Work Sans';
@@ -36,7 +35,6 @@ p, h1, h2, h3, h4, h5, h6 {
     font-weight: 100 900;  
     font-style: normal;
 }
-/* Font */
 /* Additional Global Styles */
 body {
     background-color: rgb(28 25 23);
@@ -99,13 +97,11 @@ button:hover {
     align-items: center;
     margin-top: -75%;
 }
-/* Additional Global Styles */
 /* Home Page */
 .coderImg {
     max-width: 200px;
     height: auto;
 }
-/* Home Page */
 /* High Score Page */
 .scoresUl {
     background-color: rgb(37, 37, 37);
@@ -113,12 +109,16 @@ button:hover {
     text-align: center;
     width: 100%;
     border-radius: 1rem;
+    min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .scoresLi {
     list-style: none;
 }
-/* High Score Page */
 /* Quiz Page */
 .quizPage {
     display: flex;
@@ -160,11 +160,18 @@ button:hover {
     align-items: center;
     justify-content: center;
 }
-/* Quiz Page */
 /* Quiz Finished Page */
 .quizP {
     margin: 2rem 0;
 }
+
+/* #finalScore {
+    width: 80px;
+    text-align: left; 
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+} */
 
 .initialsInput {
     width: 200px;
@@ -172,12 +179,11 @@ button:hover {
     border: none;
     padding: 0.25rem;
 }
-/* Quiz Finished Page */
 /* Hidden Class - Keep at bottom to avoid overriding. */
 .hidden {
     display: none;
 }
-/* Hidden Class - Keep at bottom to avoid overriding. */
+/* Media Queries */
 @media (max-height: 600px) {
     .homePage,
     .highScorePage,
